Fix bug with rendering u2f JS error

--- a/django_u2f/templates/u2f/verify_second_factor.html
+++ b/django_u2f/templates/u2f/verify_second_factor.html
@@ -21,6 +21,7 @@
   {% endblocktrans %}
   </p>
 
+  <p id="u2f-status"></p>
   <form method="post" id="u2f-form">
       {% csrf_token %}
       {{ forms.u2f.as_p }}
